fix: devpage on mobile screen

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+@media (max-width: 600px) {
+  
+  #modal-container {
+    top: 320px;
+  }
+}
